--- a/stankinsv2/solution/StankinsV2/StankinsAliveAngular/src/app/whatsimple/whatsimple.component.html
+++ b/stankinsv2/solution/StankinsV2/StankinsAliveAngular/src/app/whatsimple/whatsimple.component.html
@@ -1,5 +1,27 @@
 <p>
-  What do you want to do :
+  Simple recipes executors:
 </p>
 
-
+<div *ngFor="let r of rsRecipes; let i = index">
+  {{i+1}}
+  <mat-card class="example-card">
+    <mat-card-header>
+      <div mat-card-avatar class="example-header-image"></div>
+      <mat-card-title>{{r.name}}</mat-card-title>
+      <mat-card-subtitle>{{r.type}}</mat-card-subtitle>
+    </mat-card-header>
+    Explanation
+    <mat-card-content>
+      <p>
+        The following arguments are mandatory
+      </p>
+      aaa {{r.constructorParam.length}}
+      <div *ngFor="let p of r.constructorParam | keyvalue ; let jParam = index">
+        {{jParam+1}} {{p.key}} <input [(ngModel)]="p.value" />
+      </div>
+    </mat-card-content>
+    <mat-card-actions>
+      <button mat-button>Execute</button>      
+    </mat-card-actions>
+  </mat-card>
+</div>
