--- a/stankinsv2/solution/StankinsV2/StankinsAliveAngular/src/app/whatsimple/whatsimple.component.html
+++ b/stankinsv2/solution/StankinsV2/StankinsAliveAngular/src/app/whatsimple/whatsimple.component.html
@@ -1,39 +1,74 @@
-<p *ngIf="rsAll != null">
-  Number of data {{rsAll.size}}
-</p>
+<p *ngIf="rsAll != null">Number of data {{ rsRecipes?.length}}</p>
 <mat-tab-group>
-  <mat-tab label="Recipes"> 
+ <mat-tab label="Recipes"> 
+    <mat-form-field>
+        <mat-select placeholder="Select recipes" [(ngModel)]="recipeSelected">
+          <mat-option *ngFor="let r of rsRecipes" [value]="r">
+            {{r.name}}
+          </mat-option>
+        </mat-select>
+        
+        
+      </mat-form-field>
+      <div *ngIf="recipeSelected != null">
 
-
-
-  </mat-tab>
-  <mat-tab label="All recipes"> 
-    <div *ngFor="let r of rsRecipes; let i = index">
-      {{i+1}}
-      <mat-card class="example-card">
-        <mat-card-header>
-          <div mat-card-avatar class="example-header-image"></div>
-          <mat-card-title>{{r.name}}</mat-card-title>
-          <mat-card-subtitle>{{r.type}}</mat-card-subtitle>
-        </mat-card-header>
-        Explanation
-        <mat-card-content>
-          <p>
-            The following arguments are mandatory
-          </p>
-          {{r.constructorParam.length}}
-          <div *ngFor="let p of r.constructorParam | keyvalue ; let jParam = index">
-            {{jParam+1}} {{p.key}} <input [(ngModel)]="p.value" />
+          <p>Parameters for {{recipeSelected.name}}</p>
+            <div
+            *ngFor="
+              let p of (recipeSelected.constructorParam | keyvalue);
+              let jParam = index
+            "
+          >
+            {{ jParam + 1 }} {{ p.key }} <input [(ngModel)]="p.value" />
           </div>
-        </mat-card-content>
-        <mat-card-actions>
-          <button mat-button>Execute</button>      
-        </mat-card-actions>
-      </mat-card>
-    </div>
+          <mat-card-actions>
+              <button mat-button >Execute</button>
+            </mat-card-actions>
+        </div>
 
+ </mat-tab>
+  <mat-tab label="See all">
+    <mat-accordion>
+      <mat-expansion-panel *ngFor="let w of allWhat">
+        <mat-expansion-panel-header>
+          <mat-panel-title>
+            {{ WhatToList[w] }}
+          </mat-panel-title>
+          <mat-panel-description>
+            Number of {{ WhatToList[w] }} : {{rsAll.get(w).length}}
+          </mat-panel-description>
+        </mat-expansion-panel-header>
 
+        <div *ngFor="let r of rsAll.get(w); let i = index">
+            {{ WhatToList[w] }} {{ i + 1 }}
+          <mat-card class="example-card">
+            <mat-card-header>
+              <div mat-card-avatar class="example-header-image"></div>
+              <mat-card-title>{{ r.name }}</mat-card-title>
+              <mat-card-subtitle>{{ r.type }}</mat-card-subtitle>
+            </mat-card-header>
+            Explanation
+            <mat-card-content>
+              <p>
+                The following arguments are mandatory
+              </p>
+              {{ r.constructorParam.length }}
+              <div
+                *ngFor="
+                  let p of (r.constructorParam | keyvalue);
+                  let jParam = index
+                "
+              >
+                {{ jParam + 1 }} {{ p.key }} <input [(ngModel)]="p.value" />
+              </div>
+            </mat-card-content>
+            <mat-card-actions>
+              <button mat-button *ngIf="w===WhatToList.Receivers">Execute</button>
+            </mat-card-actions>
+          </mat-card>
+        </div>
+      </mat-expansion-panel>
+    </mat-accordion>
   </mat-tab>
-  
+ 
 </mat-tab-group>
-
