--- a/stankinsv2/solution/StankinsV2/StankinsDataWebAngular/src/app/recipes-list/recipes-list.component.css
+++ b/stankinsv2/solution/StankinsV2/StankinsDataWebAngular/src/app/recipes-list/recipes-list.component.css
@@ -7,3 +7,15 @@
   .example-full-width {
     width: 100%;
   }
+
+  .example-viewport {
+    height: 200px;
+    width: 500px;
+    
+    border: 1px solid black;
+  }
+  
+  .example-item {
+    height: 50px;
+  }
+  
