--- a/stankinsv2/solution/StankinsV2/StankinsDataWebAngular/src/app/recipes-list/recipes-list.component.html
+++ b/stankinsv2/solution/StankinsV2/StankinsDataWebAngular/src/app/recipes-list/recipes-list.component.html
@@ -1,14 +1,33 @@
-<p>
-  List of recipes {{numberRecipes}}
-</p>
+<p>List of recipes {{ numberRecipes }}</p>
 <form class="example-form">
   <mat-form-field class="example-full-width">
-    <input matInput placeholder="Try beer or exchange" value="" [formControl]="searchRecipe" >
+    <input
+      matInput
+      placeholder="Try beer or exchange"
+      value=""
+      [formControl]="searchRecipe"
+    />
   </mat-form-field>
-
 </form>
+<div *ngIf="findRecipes?.length > 0">
+  Found {{ findRecipes?.length }} recipes with {{ searchRecipe.value }}
 
-Found {{findRecipes?.length}}
-<mat-form-field class="example-full-width">
-  <textarea matInput placeholder="Recipe text"></textarea>
-</mat-form-field>
+  <div *ngFor="let recipe of findRecipes; let i = index">
+    <mat-card>
+      <mat-card-header>
+        <mat-card-title>{{ i + 1 }} {{ recipe.name }} </mat-card-title>
+        <mat-card-subtitle></mat-card-subtitle>
+      </mat-card-header>
+
+      <mat-card-content>
+        <p>
+          {{ recipe.description }}
+        </p>
+      </mat-card-content>
+      <mat-card-actions>
+        <button mat-button>LIKE</button>
+        <button mat-button>SHARE</button>
+      </mat-card-actions>
+    </mat-card>
+  </div>
+</div>
