--- a/stankinsv2/solution/StankinsV2/StankinsDataWebAngular/src/app/recipes-list/recipes-list.component.html
+++ b/stankinsv2/solution/StankinsV2/StankinsDataWebAngular/src/app/recipes-list/recipes-list.component.html
@@ -16,17 +16,15 @@
     <mat-card>
       <mat-card-header>
         <mat-card-title>{{ i + 1 }} {{ recipe.name }} </mat-card-title>
-        <mat-card-subtitle></mat-card-subtitle>
+        <mat-card-subtitle> </mat-card-subtitle>
       </mat-card-header>
 
       <mat-card-content>
-        <p>
           {{ recipe.description }}
-        </p>
       </mat-card-content>
       <mat-card-actions>
-        <button mat-button>LIKE</button>
-        <button mat-button>SHARE</button>
+        <button mat-button>Execute</button>
+        <button mat-button>Modify and share</button>
       </mat-card-actions>
     </mat-card>
   </div>
