--- a/stankinsv2/solution/StankinsV2/StankinsDataWebAngular/src/app/recipes-list/recipes-list.component.html
+++ b/stankinsv2/solution/StankinsV2/StankinsDataWebAngular/src/app/recipes-list/recipes-list.component.html
@@ -16,7 +16,7 @@
     <mat-card>
       <mat-card-header>
         <mat-card-title>{{ i + 1 }} {{ recipe.name }} </mat-card-title>
-        <mat-card-subtitle> </mat-card-subtitle>
+        <mat-card-subtitle> <a routerLink="/recipe/{{recipe.name}}" >Link</a> </mat-card-subtitle>
       </mat-card-header>
 
       <mat-card-content>
