--- a/stankinsv2/solution/StankinsV2/StankinsDataWebAngular/src/app/recipes/recipes.component.html
+++ b/stankinsv2/solution/StankinsV2/StankinsDataWebAngular/src/app/recipes/recipes.component.html
@@ -22,6 +22,6 @@
       </button>
       <span>StankinsDataWebAngular</span>
     </mat-toolbar>
-    <app-recipes-list></app-recipes-list>
+    <router-outlet></router-outlet>
   </mat-sidenav-content>
 </mat-sidenav-container>
