--- a/stankinsv2/solution/StankinsV2/StankinsDataWebAngular/src/app/recipe/recipe.component.html
+++ b/stankinsv2/solution/StankinsV2/StankinsDataWebAngular/src/app/recipe/recipe.component.html
@@ -1,3 +1,6 @@
+<a routerLink="/recipeList" >All recipes({{nr}})</a> 
 <p>
-  recipe works! {{name}}
+  Recipe {{selectedRecipe?.name}}
 </p>
+<textarea style="width:90%;height:175px" >{{selectedRecipe?.content}}
+</textarea>
