stankins with id in recipe list

--- a/stankinsv2/solution/StankinsV2/StankinsDataWebAngular/src/app/recipes-list/recipes-list.component.html
+++ b/stankinsv2/solution/StankinsV2/StankinsDataWebAngular/src/app/recipes-list/recipes-list.component.html
@@ -10,8 +10,10 @@
   </mat-form-field>
 </form>
 <div *ngIf="findRecipes?.length > 0">
-  Found {{ findRecipes?.length }} recipes with {{ searchRecipe.value }}
-
+  Found {{ findRecipes?.length }} recipes with  {{ searchRecipe.value }} 
+  <span *ngIf="searchRecipe.value?.length>0" >
+ ( <a [routerLink]="['/recipeList']" [queryParams]="{id:searchRecipe.value}"> Direct search link </a> )
+</span>
   <div *ngFor="let recipe of findRecipes; let i = index">
     <mat-card>
       <mat-card-header>
