--- a/stankinsv2/solution/StankinsV2/StankinsDataWebAngular/src/app/recipes/recipes.component.html
+++ b/stankinsv2/solution/StankinsV2/StankinsDataWebAngular/src/app/recipes/recipes.component.html
@@ -5,9 +5,9 @@
       [opened]="!(isHandset$ | async)">
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item href="#">Link 1</a>
-      <a mat-list-item href="#">Link 2</a>
-      <a mat-list-item href="#">Link 3</a>
+      <a mat-list-item routerLink="recipeList">Recipe list</a>   
+            
+      <a mat-list-item  routerLink='/about'>About</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
