--- a/stankinsv2/solution/StankinsV2/StankinsDataWebAngular/src/app/recipes/recipes.component.html
+++ b/stankinsv2/solution/StankinsV2/StankinsDataWebAngular/src/app/recipes/recipes.component.html
@@ -6,7 +6,7 @@
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
       <a mat-list-item routerLink="recipeList">Recipe list</a>   
-            
+      <a mat-list-item  routerLink='/receiveData'>Dynamic Definition</a>
       <a mat-list-item  routerLink='/about'>About</a>
     </mat-nav-list>
   </mat-sidenav>
